[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Map/Testing/grid_default.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Grid.gd" type="Script" id=2]

[node name="Grid" type="Node2D"]
script = ExtResource( 2 )

[node name="left_bot" type="Node2D" parent="."]
position = Vector2( 0, 128 )

[node name="Sprite" type="Sprite" parent="left_bot"]
texture = ExtResource( 1 )

[node name="left_mid" type="Node2D" parent="."]
position = Vector2( 0, 64 )

[node name="Sprite" type="Sprite" parent="left_mid"]
texture = ExtResource( 1 )

[node name="left_top" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="left_top"]
texture = ExtResource( 1 )

[node name="right_bot" type="Node2D" parent="."]
position = Vector2( 256, 128 )

[node name="Sprite" type="Sprite" parent="right_bot"]
texture = ExtResource( 1 )

[node name="right_mid" type="Node2D" parent="."]
position = Vector2( 256, 64 )

[node name="Sprite" type="Sprite" parent="right_mid"]
texture = ExtResource( 1 )

[node name="right_top" type="Node2D" parent="."]
position = Vector2( 256, 0 )

[node name="Sprite" type="Sprite" parent="right_top"]
texture = ExtResource( 1 )
